--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   padding:0;
   box-sizing:border-box;
 }
+.container{
+  width:100%;
+  height:100%;
+}
+
 .conatiner .Navbar-app{
   position:fixed;
   top:0;
